Partial port to 1.20.6