@@ -1,7 +1,7 @@
 package net.silentchaos512.gear.crafting.recipe;
 
+import net.minecraft.core.HolderLookup;
 import net.minecraft.core.NonNullList;
-import net.minecraft.core.RegistryAccess;
 import net.minecraft.world.inventory.CraftingContainer;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.CraftingBookCategory;
@@ -10,14 +10,13 @@ import net.minecraft.world.item.crafting.RecipeSerializer;
 import net.minecraft.world.level.Level;
 import net.neoforged.neoforge.common.CommonHooks;
 import net.silentchaos512.gear.api.item.ICoreItem;
-import net.silentchaos512.gear.api.part.PartDataList;
+import net.silentchaos512.gear.api.part.PartList;
 import net.silentchaos512.gear.api.part.PartType;
 import net.silentchaos512.gear.config.Config;
-import net.silentchaos512.gear.gear.part.PartData;
+import net.silentchaos512.gear.gear.part.PartInstance;
 import net.silentchaos512.gear.item.MainPartItem;
 import net.silentchaos512.gear.setup.SgRecipes;
 import net.silentchaos512.gear.util.GearData;
-import net.silentchaos512.gear.util.GearHelper;
 import net.silentchaos512.lib.collection.StackList;
 
 import java.util.*;
@@ -40,12 +39,12 @@ public class GearPartSwapRecipe extends CustomRecipe {
         Map<PartType, Integer> typeCounts = new HashMap<>();
 
         for (ItemStack stack : others) {
-            PartData part = PartData.from(stack);
+            PartInstance part = PartInstance.from(stack);
             if (part == null) return false;
 
             // Only required part types, and no duplicates
             PartType type = part.getType();
-            if (!item.supportsPart(gear, part) || typeCounts.getOrDefault(type, 0) >= type.getMaxPerItem(item.getGearType())) {
+            if (!item.supportsPart(gear, part) || typeCounts.getOrDefault(type, 0) >= type.maxPerItem()) {
                 return false;
             }
             typeCounts.merge(type, 1, Integer::sum);
@@ -54,7 +53,7 @@ public class GearPartSwapRecipe extends CustomRecipe {
     }
 
     @Override
-    public ItemStack assemble(CraftingContainer inv, RegistryAccess registryAccess) {
+    public ItemStack assemble(CraftingContainer inv, HolderLookup.Provider registryAccess) {
         StackList list = StackList.from(inv);
         ItemStack gear = list.uniqueOfType(ICoreItem.class);
         if (gear.isEmpty()) return ItemStack.EMPTY;
@@ -63,20 +62,20 @@ public class GearPartSwapRecipe extends CustomRecipe {
         if (others.isEmpty()) return ItemStack.EMPTY;
 
         ItemStack result = gear.copy();
-        PartDataList parts = GearData.getConstructionParts(result);
-        PartDataList newParts = PartDataList.of();
+        PartList parts = GearData.getConstruction(gear).parts();
+        PartList newParts = PartList.of();
 
         for (ItemStack stack : others) {
-            PartData part = PartData.from(stack);
+            PartInstance part = PartInstance.from(stack);
             if (part == null) return ItemStack.EMPTY;
 
             PartType type = part.getType();
             List<PartData> partsOfType = new ArrayList<>(parts.getPartsOfType(type));
-            int maxPerItem = type.getMaxPerItem(GearHelper.getType(result));
+            int maxPerItem = type.maxPerItem();
 
             // Remove old part of type (if over limit), then add replacement
             if (partsOfType.size() >= maxPerItem) {
-                PartData oldPart = partsOfType.get(0);
+                PartData oldPart = partsOfType.getFirst();
                 partsOfType.remove(oldPart);
                 parts.remove(oldPart);
                 oldPart.onRemoveFromGear(result);
@@ -87,7 +86,6 @@ public class GearPartSwapRecipe extends CustomRecipe {
         }
 
         GearData.writeConstructionParts(result, parts);
-        GearData.removeExcessParts(result);
         GearData.recalculateStats(result, CommonHooks.getCraftingPlayer());
         newParts.forEach(p -> p.onAddToGear(result));
 
@@ -98,7 +96,7 @@ public class GearPartSwapRecipe extends CustomRecipe {
     public NonNullList<ItemStack> getRemainingItems(CraftingContainer inv) {
         NonNullList<ItemStack> list = NonNullList.withSize(inv.getContainerSize(), ItemStack.EMPTY);
         ItemStack gear = StackList.from(inv).uniqueMatch(s -> s.getItem() instanceof ICoreItem);
-        PartDataList oldParts = GearData.getConstructionParts(gear);
+        PartList oldParts = GearData.getConstruction(gear).parts();
         Map<PartType, Integer> removedCount = new HashMap<>();
 
         for (int i = 0; i < list.size(); ++i) {
@@ -107,12 +105,12 @@ public class GearPartSwapRecipe extends CustomRecipe {
             if (stack.getItem() instanceof ICoreItem) {
                 list.set(i, ItemStack.EMPTY);
             } else {
-                PartData newPart = PartData.from(stack);
+                PartInstance newPart = PartInstance.from(stack);
                 if (newPart != null && !Config.Common.destroySwappedParts.get()) {
                     PartType type = newPart.getType();
                     List<PartData> partsOfType = oldParts.getPartsOfType(type);
 
-                    if (partsOfType.size() >= type.getMaxPerItem(GearHelper.getType(gear))) {
+                    if (partsOfType.size() >= type.maxPerItem()) {
                         int index = removedCount.getOrDefault(type, 0);
                         if (index < partsOfType.size()) {
                             // Return old part
