@@ -1,30 +1,28 @@
 package net.silentchaos512.gear.gear.material;
 
-import com.google.gson.*;
-import net.minecraft.network.FriendlyByteBuf;
+import com.mojang.serialization.MapCodec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
+import net.minecraft.network.RegistryFriendlyByteBuf;
 import net.minecraft.network.chat.Component;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.util.GsonHelper;
+import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.world.Container;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.Tier;
 import net.minecraft.world.item.crafting.Ingredient;
 import net.neoforged.neoforge.common.NeoForge;
-import net.silentchaos512.gear.SilentGear;
-import net.silentchaos512.gear.api.event.GetMaterialStatsEvent;
+import net.silentchaos512.gear.api.event.GetMaterialPropertiesEvent;
 import net.silentchaos512.gear.api.item.GearType;
 import net.silentchaos512.gear.api.material.*;
 import net.silentchaos512.gear.api.part.PartType;
-import net.silentchaos512.gear.api.stats.ItemStat;
-import net.silentchaos512.gear.api.stats.StatInstance;
+import net.silentchaos512.gear.api.property.GearPropertyValue;
 import net.silentchaos512.gear.api.traits.TraitInstance;
+import net.silentchaos512.gear.api.util.DataResource;
 import net.silentchaos512.gear.api.util.PartGearKey;
-import net.silentchaos512.gear.api.util.StatGearKey;
-import net.silentchaos512.gear.client.material.CompoundMaterialDisplay;
+import net.silentchaos512.gear.api.util.PropertyKey;
+import net.silentchaos512.gear.client.util.ColorUtils;
 import net.silentchaos512.gear.item.CompoundMaterialItem;
-import net.silentchaos512.gear.util.ModResourceLocation;
+import net.silentchaos512.gear.setup.SgRegistries;
+import net.silentchaos512.gear.setup.gear.PartTypes;
 import net.silentchaos512.gear.util.SynergyUtils;
-import net.silentchaos512.gear.util.TierHelper;
 import net.silentchaos512.gear.util.TraitHelper;
 import net.silentchaos512.lib.util.Color;
 import net.silentchaos512.lib.util.MathUtils;
@@ -33,73 +31,38 @@ import javax.annotation.Nullable;
 import java.util.*;
 import java.util.stream.Collectors;
 
-public class CompoundMaterial implements IMaterial { // TODO: Extend AbstractMaterial
-    private final ResourceLocation materialId;
-    private final String packName;
-    private final Collection<IMaterialCategory> categories = new ArrayList<>();
-    private Ingredient ingredient = Ingredient.EMPTY;
-    private boolean visible = true;
-    private boolean canSalvage = true;
-    private Component displayName;
-    @Nullable private Component namePrefix = null;
-
-    public CompoundMaterial(ResourceLocation id, String packName) {
-        this.materialId = id;
-        this.packName = packName;
+public class CompoundMaterial extends AbstractMaterial {
+    public CompoundMaterial(DataResource<Material> parent, MaterialCraftingData crafting, MaterialDisplayData display) {
+        super(parent, crafting, display, Collections.emptyMap());
     }
 
-    @Override
-    public MaterialList getMaterials(IMaterialInstance material) {
+    public List<MaterialInstance> getSubMaterials(MaterialInstance material) {
         return CompoundMaterialItem.getSubMaterials(material.getItem());
     }
 
     @Override
-    public String getPackName() {
-        return packName;
+    public MaterialSerializer<?> getSerializer() {
+        return MaterialSerializers.COMPOUND.get();
     }
 
     @Override
-    public ResourceLocation getId() {
-        return materialId;
-    }
-
-    @Override
-    public IMaterialSerializer<?> getSerializer() {
-        return MaterialSerializers.COMPOUND;
+    public boolean isSimple() {
+        return false;
     }
 
     @Nullable
     @Override
-    public IMaterial getParent() {
+    public Material getParent() {
         return null;
     }
 
     @Override
-    public Collection<IMaterialCategory> getCategories(IMaterialInstance material) {
-        Set<IMaterialCategory> set = new HashSet<>(categories);
-        for (IMaterialInstance mat : getMaterials(material)) {
+    public Collection<IMaterialCategory> getCategories(MaterialInstance material) {
+        Set<IMaterialCategory> set = new HashSet<>(this.crafting.categories());
+        for (MaterialInstance mat : getSubMaterials(material)) {
             set.addAll(mat.getCategories());
         }
         return set;
-    }
-
-    @Override
-    public int getTier(IMaterialInstance material, PartType partType) {
-        MaterialList materials = getMaterials(material);
-        return materials.stream()
-                .mapToInt(m -> m.getTier(partType))
-                .max()
-                .orElse(0);
-    }
-
-    @Override
-    public Tier getHarvestTier(IMaterialInstance material) {
-        return TierHelper.getHighestTier(getMaterials(material));
-    }
-
-    @Override
-    public Ingredient getIngredient() {
-        return ingredient;
     }
 
     @Override
@@ -118,25 +81,15 @@ public class CompoundMaterial implements IMaterial { // TODO: Extend AbstractMat
     }
 
     @Override
-    public IMaterialInstance onSalvage(IMaterialInstance material) {
-        return AbstractMaterial.removeEnhancements(material);
-    }
-
-    @Override
-    public boolean isSimple() {
-        return false;
-    }
-
-    @Override
-    public Set<PartType> getPartTypes(IMaterialInstance material) {
-        List<IMaterialInstance> subMaterials = getMaterials(material);
+    public Set<PartType> getPartTypes(MaterialInstance material) {
+        List<MaterialInstance> subMaterials = getSubMaterials(material);
         if (subMaterials.isEmpty()) {
             return Collections.emptySet();
         } else if (subMaterials.size() == 1) {
-            return subMaterials.get(0).getPartTypes();
+            return subMaterials.getFirst().getPartTypes();
         }
 
-        Set<PartType> set = new LinkedHashSet<>(subMaterials.get(0).getPartTypes());
+        Set<PartType> set = new LinkedHashSet<>(subMaterials.getFirst().getPartTypes());
         for (int i = 1; i < subMaterials.size(); ++i) {
             Set<PartType> set1 = subMaterials.get(i).getPartTypes();
             Set<PartType> toRemove = new HashSet<>();
@@ -152,98 +105,61 @@ public class CompoundMaterial implements IMaterial { // TODO: Extend AbstractMat
     }
 
     @Override
-    public boolean allowedInPart(IMaterialInstance material, PartType partType) {
+    public boolean isAllowedInPart(MaterialInstance material, PartType partType) {
         return getPartTypes(material).contains(partType);
     }
 
-    @SuppressWarnings("OverlyComplexMethod")
     @Override
-    public Collection<StatInstance> getStatModifiers(IMaterialInstance material, PartType partType, StatGearKey key, ItemStack gear) {
+    public Collection<PropertyKey<?, ?>> getPropertyKeys(MaterialInstance material, PartType type) {
+        return getSubMaterials(material).stream()
+                .flatMap(mat -> mat.get().getPropertyKeys(mat, type).stream())
+                .collect(Collectors.toSet());
+    }
+
+    @Override
+    public <T, V extends GearPropertyValue<T>> Collection<V> getPropertyModifiers(MaterialInstance material, PartType partType, PropertyKey<T, V> key) {
         // Get the materials and all the stat modifiers they provide for this stat
-        Collection<IMaterialInstance> materials = getMaterials(material);
-        List<StatInstance> statMods = materials.stream()
+        var subMaterials = getSubMaterials(material);
+        var propertyMods = subMaterials.stream()
                 .map(AbstractMaterial::removeEnhancements)
-                .flatMap(m -> m.getStatModifiers(partType, key).stream())
+                .flatMap(m -> m.getPropertyModifiers(partType, key).stream())
                 .collect(Collectors.toList());
 
-        ItemStat stat = key.getStat() instanceof ItemStat ? (ItemStat) key.getStat() : null;
-
-        // Get any base modifiers for this material (could be none)
-        //statMods.addAll(this.stats.get(stat));
-
-        if (stat == null || statMods.isEmpty()) {
+        if (propertyMods.isEmpty()) {
             // No modifiers for this stat, so doing anything else is pointless
-            return statMods;
+            return propertyMods;
         }
 
-        MaterialInstance matInst = material instanceof MaterialInstance ? (MaterialInstance) material : null;
-        GetMaterialStatsEvent event = null;
-        if (matInst != null) {
-            // FIXME: Potentially bad cast, need to rework event
-            event = new GetMaterialStatsEvent(matInst, stat, partType, statMods);
-            NeoForge.EVENT_BUS.post(event);
-        }
+        //noinspection unchecked
+        var castedPropertyMods = (Collection<GearPropertyValue<?>>) propertyMods;
+        var event = new GetMaterialPropertiesEvent(material, partType, key.property(), castedPropertyMods);
+        NeoForge.EVENT_BUS.post(event);
 
         // Average together all modifiers of the same op. This makes things like rods with varying
         // numbers of materials more "sane".
-        List<StatInstance> ret = new ArrayList<>(event != null ? event.getModifiers() : Collections.emptyList());
-        for (StatInstance.Operation op : StatInstance.Operation.values()) {
-            Collection<StatInstance> modsForOp = ret.stream().filter(s -> s.getOp() == op).collect(Collectors.toList());
-            if (modsForOp.size() > 1) {
-                StatInstance mod = compressModifiers(modsForOp, op, key);
-                ret.removeIf(inst -> inst.getOp() == op);
-                ret.add(mod);
-            }
-        }
+        //noinspection unchecked
+        final var modifiersFromEvent = (List<V>) new ArrayList<>(event.getModifiers());
+        final var partGearKey = PartGearKey.ofAll(partType);
+        final var compressedModifiers = key.property().compressModifiers(modifiersFromEvent, partGearKey, subMaterials);
 
         // Synergy
-        if (stat.doesSynergyApply() && matInst != null) {
-            final float synergy = SynergyUtils.getSynergy(partType, new ArrayList<>(materials), getTraits(matInst, PartGearKey.ofAll(partType), gear));
+        final var modifiersWithSynergy = new ArrayList<V>();
+        if (key.property().isAffectedBySynergy()) {
+            final float synergy = SynergyUtils.getSynergy(partType, new ArrayList<>(subMaterials), getTraits(material, partGearKey));
             if (!MathUtils.floatsEqual(synergy, 1.0f)) {
-                final float multi = synergy - 1f;
-                for (int i = 0; i < ret.size(); ++i) {
-                    StatInstance oldMod = ret.get(i);
-                    float value = oldMod.getValue();
-                    // Taking the abs of value times multi makes negative mods become less negative
-                    StatInstance newMod = oldMod.copySetValue(value + Math.abs(value) * multi);
-                    ret.remove(i);
-                    ret.add(i, newMod);
+                for (var mod : compressedModifiers) {
+                    modifiersWithSynergy.add(key.property().applySynergy(mod, synergy));
                 }
             }
         }
 
-        return ret;
+        return modifiersWithSynergy;
     }
 
     @Override
-    public Collection<StatGearKey> getStatKeys(IMaterialInstance material, PartType type) {
-        return getMaterials(material).stream()
-                .flatMap(mat -> mat.getStatKeys(type).stream())
-                .collect(Collectors.toSet());
-    }
-
-    @Nullable
-    @Override
-    public IMaterialDisplay getDisplayOverride(IMaterialInstance material) {
-        return CompoundMaterialDisplay.INSTANCE;
-    }
-
-    private static StatInstance compressModifiers(Collection<StatInstance> mods, StatInstance.Operation operation, StatGearKey key) {
-        // We do NOT want to average together max modifiers...
-        if (operation == StatInstance.Operation.MAX) {
-            return mods.stream()
-                    .max((o1, o2) -> Float.compare(o1.getValue(), o2.getValue()))
-                    .orElse(StatInstance.of(0, operation, key))
-                    .copy();
-        }
-
-        return StatInstance.getMaterialWeightedAverageMod(mods, operation);
-    }
-
-    @Override
-    public Collection<TraitInstance> getTraits(IMaterialInstance material, PartGearKey partKey, ItemStack gear) {
-        List<IMaterialInstance> materials = new ArrayList<>(getMaterials(material));
-        List<TraitInstance> traits = TraitHelper.getTraits(materials, partKey, ItemStack.EMPTY);
+    public Collection<TraitInstance> getTraits(MaterialInstance material, PartGearKey partKey) {
+        List<MaterialInstance> materials = new ArrayList<>(getSubMaterials(material));
+        List<TraitInstance> traits = TraitHelper.getTraitsFromComponents(materials, partKey, ItemStack.EMPTY);
         Collection<TraitInstance> ret = new ArrayList<>();
 
         for (TraitInstance inst : traits) {
@@ -256,166 +172,73 @@ public class CompoundMaterial implements IMaterial { // TODO: Extend AbstractMat
     }
 
     @Override
-    public boolean isCraftingAllowed(IMaterialInstance material, PartType partType, GearType gearType, @Nullable Container inventory) {
-        if (!allowedInPart(material, partType)) {
+    public boolean isCraftingAllowed(MaterialInstance material, PartType partType, GearType gearType, @Nullable Container inventory) {
+        if (!isAllowedInPart(material, partType)) {
             return false;
         }
 
-        if (partType == PartType.MAIN) {
-            StatGearKey key = StatGearKey.of(gearType.getDurabilityStat(), gearType);
-            return !getStatModifiers(material, partType, key).isEmpty() && getStatUnclamped(material, partType, key, ItemStack.EMPTY) > 0;
+        if (partType == PartTypes.MAIN.get()) {
+            var key = PropertyKey.of(gearType.durabilityStat().get(), gearType);
+            return !getPropertyModifiers(material, partType, key).isEmpty()
+                    && getPropertyUnclamped(material, partType, key) > 0;
         }
 
         return true;
     }
 
     @Override
-    public Component getDisplayName(@Nullable IMaterialInstance material, PartType type, ItemStack gear) {
+    public Component getDisplayName(@Nullable MaterialInstance material, PartType type) {
         if (material != null) {
             return material.getItem().getHoverName();
         }
-        return displayName.copy();
-    }
-
-    @Nullable
-    @Override
-    public Component getDisplayNamePrefix(ItemStack gear, PartType partType) {
-        return namePrefix != null ? namePrefix.copy() : null;
+        return this.display.name().copy();
     }
 
     @Override
-    public int getNameColor(IMaterialInstance material, PartType partType, GearType gearType) {
-        IMaterialDisplay model = material.getDisplayProperties();
-        int color = model.getLayerColor(gearType, partType, material, 0);
+    public int getColor(MaterialInstance material, PartType partType, GearType gearType) {
+        // TODO: Might need to cache the computed color value somewhere...
+        return ColorUtils.getBlendedColorForCompoundMaterial(getSubMaterials(material));
+    }
+
+    @Override
+    public int getNameColor(MaterialInstance material, PartType partType, GearType gearType) {
+        var color = getColor(material, partType, gearType);
         return Color.blend(color, Color.VALUE_WHITE, 0.25f) & 0xFFFFFF;
     }
 
     @Override
-    public String getModelKey(IMaterialInstance material) {
-        return IMaterial.super.getModelKey(material) + "[" + getMaterials(material).getModelKey() + "]";
+    public String getModelKey(MaterialInstance material) {
+        var commaSeparatedMaterialList = getSubMaterials(material).stream()
+                .map(MaterialInstance::getModelKey)
+                .collect(Collectors.joining(","));
+        return super.getModelKey(material) + "[" + commaSeparatedMaterialList + "]";
     }
 
     @Override
     public String toString() {
         return "CompoundMaterial{" +
-                "id=" + materialId +
-                ", ingredient=" + ingredient +
+                SgRegistries.MATERIAL.getKey(this) +
                 '}';
     }
 
-    public static final class Serializer implements IMaterialSerializer<CompoundMaterial> {
-        static final int PACK_NAME_MAX_LENGTH = 32;
-        public static final ModResourceLocation NAME = SilentGear.getId("compound");
+    public static final class Serializer extends MaterialSerializer<CompoundMaterial> {
+        public static final MapCodec<CompoundMaterial> CODEC = RecordCodecBuilder.mapCodec(
+                instance -> instance.group(
+                        DataResource.MATERIAL_CODEC.fieldOf("parent").forGetter(m -> m.parent),
+                        MaterialCraftingData.CODEC.fieldOf("crafting").forGetter(m -> m.crafting),
+                        MaterialDisplayData.CODEC.fieldOf("display").forGetter(m -> m.display)
+                ).apply(instance, CompoundMaterial::new)
+        );
 
-        @Override
-        public CompoundMaterial deserialize(ResourceLocation id, String packName, JsonObject json) {
-            CompoundMaterial ret = new CompoundMaterial(id, packName);
+        public static final StreamCodec<RegistryFriendlyByteBuf, CompoundMaterial> STREAM_CODEC = StreamCodec.composite(
+                DataResource.MATERIAL_STREAM_CODEC, m -> m.parent,
+                MaterialCraftingData.STREAM_CODEC, m -> m.crafting,
+                MaterialDisplayData.STREAM_CODEC, m -> m.display,
+                CompoundMaterial::new
+        );
 
-            deserializeCraftingItems(json, ret);
-            deserializeNames(json, ret);
-            deserializeAvailability(json, ret);
-
-            return ret;
-        }
-
-        private static void deserializeAvailability(JsonObject json, CompoundMaterial ret) {
-            JsonElement elementAvailability = json.get("availability");
-            if (elementAvailability != null && elementAvailability.isJsonObject()) {
-                JsonObject obj = elementAvailability.getAsJsonObject();
-
-                deserializeCategories(obj.get("categories"), ret);
-                ret.visible = GsonHelper.getAsBoolean(obj, "visible", ret.visible);
-                ret.canSalvage = GsonHelper.getAsBoolean(obj, "can_salvage", ret.canSalvage);
-            }
-        }
-
-        private static void deserializeCategories(@Nullable JsonElement json, CompoundMaterial material) {
-            if (json != null) {
-                if (json.isJsonArray()) {
-                    JsonArray array = json.getAsJsonArray();
-                    for (JsonElement elem : array) {
-                        material.categories.add(MaterialCategories.get(elem.getAsString()));
-                    }
-                } else if (json.isJsonPrimitive()) {
-                    material.categories.add(MaterialCategories.get(json.getAsString()));
-                } else {
-                    throw new JsonParseException("Expected 'categories' to be array or string");
-                }
-            }
-        }
-
-        private static void deserializeCraftingItems(JsonObject json, CompoundMaterial ret) {
-            JsonElement craftingItems = json.get("crafting_items");
-            if (craftingItems != null && craftingItems.isJsonObject()) {
-                JsonElement main = craftingItems.getAsJsonObject().get("main");
-                if (main != null) {
-                    ret.ingredient = Ingredient.fromJson(main, true);
-                }
-            } else {
-                throw new JsonSyntaxException("Expected 'crafting_items' to be an object");
-            }
-        }
-
-        private static void deserializeNames(JsonObject json, CompoundMaterial ret) {
-            // Name
-            JsonElement elementName = json.get("name");
-            if (elementName != null && elementName.isJsonObject()) {
-                ret.displayName = deserializeText(elementName);
-            } else {
-                throw new JsonSyntaxException("Expected 'name' element");
-            }
-
-            // Name Prefix
-            JsonElement elementNamePrefix = json.get("name_prefix");
-            if (elementNamePrefix != null) {
-                ret.namePrefix = deserializeText(elementNamePrefix);
-            }
-        }
-
-        private static Component deserializeText(JsonElement json) {
-            return Objects.requireNonNull(Component.Serializer.fromJson(json));
-        }
-
-        @Override
-        public CompoundMaterial read(ResourceLocation id, FriendlyByteBuf buffer) {
-            CompoundMaterial material = new CompoundMaterial(id, buffer.readUtf(PACK_NAME_MAX_LENGTH));
-
-            int categoryCount = buffer.readByte();
-            for (int i = 0; i < categoryCount; ++i) {
-                material.categories.add(MaterialCategories.get(buffer.readUtf()));
-            }
-
-            material.displayName = buffer.readComponent();
-            if (buffer.readBoolean())
-                material.namePrefix = buffer.readComponent();
-
-            material.visible = buffer.readBoolean();
-            material.canSalvage = buffer.readBoolean();
-            material.ingredient = Ingredient.fromNetwork(buffer);
-
-            return material;
-        }
-
-        @Override
-        public void write(FriendlyByteBuf buffer, CompoundMaterial material) {
-            buffer.writeUtf(material.packName.substring(0, Math.min(PACK_NAME_MAX_LENGTH, material.packName.length())), PACK_NAME_MAX_LENGTH);
-
-            buffer.writeByte(material.categories.size());
-            material.categories.forEach(cat -> buffer.writeUtf(cat.getName()));
-
-            buffer.writeComponent(material.displayName);
-            buffer.writeBoolean(material.namePrefix != null);
-            if (material.namePrefix != null)
-                buffer.writeComponent(material.namePrefix);
-
-            buffer.writeBoolean(material.visible);
-            buffer.writeBoolean(material.canSalvage);
-            material.ingredient.toNetwork(buffer);
-        }
-
-        @Override
-        public ResourceLocation getName() {
-            return NAME;
+        public Serializer() {
+            super(CODEC, STREAM_CODEC);
         }
     }
 }
